--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,16 @@
 --background-color:white;
 --nav-color:rgba(255, 255, 255, 0.60);
 --herobuttoncolor:#188ce8;
+--section-title-color:#212121;
 }
 
 body {
     font-family: "Roboto", sans-serif;
     color:var(--primary-color);
+    font-weight: 400;
+     font-style:normal;
+     line-height:normal;
+
 }
 footer{
     background-color: var(--fon-color);
@@ -27,10 +32,13 @@ footer{
      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
     border-radius: 4px;
     color:var(--background-color);
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
     cursor: pointer;
     transition: background-color 300ms;
+    text-align:center;
+    margin: 0 auto;
+    display: block;
 }
 .solutionsForBuisness{
     color: var(--background-color);
@@ -39,76 +47,52 @@ footer{
     line-height: 60px;
     letter-spacing: 2.64px;
     word-wrap: break-word;
-    
     font-weight: bold;
-    top:50%;
-    left: 25%;
-    right:25%;
-   
-    position: absolute;
 text-align:center;
 }
-
 .title
 {
 background-color: var(--fon-color);
-padding-top: 500px;
+padding-top: 200px;
+padding-bottom:280px;
+padding-left:452px;
+padding-right:452px;
 }
 .filter
 {
     transition: background-color 300ms;
-    color: var(--title-color);
+    color: var(--section-title-color);
 font-size: 16px;
-
 font-weight: 500;
 line-height: 26px;
 letter-spacing: 0.48px;
 word-wrap: break-word
 }
-a:hover
-{
-color:var(--color-button);
-}
-.HeroButton:hover
+.HeroButton:focus,.HeroButton:active,.HeroButton:hover
 {
     background-color: var(--herobuttoncolor);
     color:var(--background-color);
 }
-.HeroButton:focus
-{
-    background-color: var(--herobuttoncolor);
-    color:var(--background-color);
-}
-.filter:hover
+.filter:hover,.filter:active,.filter:focus
 {
     background-color: var(--color-button);
     color:var(--background-color);
 }
-.filter:focus
-{
-    background-color: var(--color-button);
-    color:var(--background-color);
-}
-a:focus
-{   
-    color:var(--color-button); 
-}
-
-a.headerLogo
+.headerLogo
 {
 color:var(--title-color);
 font-size: 26px;
-font-family: Raleway;
+font-family: "Raleway" , sans-serif;
 font-weight: 700;
 letter-spacing: 0.78px;
 word-wrap: break-word;
 text-decoration: none;
 }
-a.footerLogo
+.footerLogo
 {
 color:var(--background-color);
 font-size: 26px;
-font-family: Raleway;
+font-family: "Raleway", sans-serif;
 font-weight: 700;
 letter-spacing: 0.78px;
 word-wrap: break-word;
@@ -122,14 +106,24 @@ text-decoration: none;
 {
     color: var(--background-color);
     font-size: 14px;
-    font-weight: 400;
     line-height: 16px;
     letter-spacing: 0.42px;
     word-wrap: break-word;
     text-decoration: none;
-font-style:normal;
+    font-style: normal;
 }
-
+.NavigationMenu:hover, .NavigationMenu:active, .NavigationMenu:focus
+{
+   color:var(--color-button);  
+}
+.footer-contact:hover, .footer-contact:active, .footer-contact:focus
+{
+   color:var(--color-button);  
+}
+.header-contact:hover, .header-contact:active, .header-contact:focus
+{
+   color:var(--color-button);  
+}
 .NavigationMenu
 {
     color: var(--title-color);
@@ -138,14 +132,12 @@ font-weight: 500;
 letter-spacing: 0.28px;
 word-wrap: break-word;
 text-decoration: none;
-font-style:normal;
 transition:color 300ms;
 }
-.Navigation
+.footer-contact
 {
 color: var(--nav-color);
 font-size: 14px;
-font-weight: 400;
 line-height: 16px;
 letter-spacing: 0.42px;
 word-wrap: break-word;
@@ -162,21 +154,22 @@ text-transform: uppercase;
 letter-spacing: 0.42px;
 word-wrap: break-word
 }
-.description
+.Description
 {
     color: var(--primary-color);
 font-size: 14px;
-font-weight: 400;
 line-height: 24px;
 letter-spacing: 0.42px;
 word-wrap: break-word
 }
 .sectiontitle
-{color: var(--title-color);
+{color: var(--section-title-color);
 font-size: 36px;
 font-weight: 700;
 letter-spacing: 1.08px;
-word-wrap: break-word
+word-wrap: break-word;
+text-decoration: none;
+font-style:normal;
 }
 .programmers
 {
@@ -190,7 +183,6 @@ word-wrap: break-word
 {
     color: var(--primary-color);
 font-size: 16px;
-font-weight: 400;
 letter-spacing: 0.48px;
 word-wrap: break-word
 }
@@ -207,12 +199,37 @@ word-wrap: break-word
 {
     color:var(--primary-color);
 font-size: 16px;
-font-weight: 400;
 line-height: 30px;
 letter-spacing: 0.48px;
 word-wrap: break-word;
 }
 ul 
 {
-list-style-type: none;
+list-style: none;
+text-decoration: none;
+}
+.header-contact
+{
+    color: var(--primary-color);
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.42px;
+word-wrap: break-word;
+text-decoration: none;
+font-style:normal;
+transition: color 300ms;
+}
+a
+{
+    text-decoration: none;
+}
+.active
+{
+    color: var(--color-button);
+font-size: 14px;
+font-weight: 500;
+letter-spacing: 0.28px;
+word-wrap: break-word;
+text-decoration: none;
+transition:color 300ms;
 }
