--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
    --primary-color:#757575;
     --fon-color:#2F303A;
     --color-button:#2196f3;
-    --title-color:black;
+    --title-color:#212121;
 --background-color:white;
 --nav-color:rgba(255, 255, 255, 0.60);
 --herobuttoncolor:#188ce8;
