Adding text structure in CSS

--- a/css/style.css
+++ b/css/style.css
@@ -1,235 +1,306 @@
 @import url(https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap);
 
-:root
-{
-   --primary-color:#757575;
-    --fon-color:#2F303A;
-    --color-button:#2196f3;
-    --title-color:#212121;
---background-color:white;
---nav-color:rgba(255, 255, 255, 0.60);
---herobuttoncolor:#188ce8;
---section-title-color:#212121;
+:root {
+  --primary-color: #757575;
+  --fon-color: #2f303a;
+  --color-button: #2196f3;
+  --title-color: #212121;
+  --background-color: white;
+  --nav-color: rgba(255, 255, 255, 0.6);
+  --herobuttoncolor: #188ce8;
+  --section-title-color: #212121;
 }
 
 body {
-    font-family: "Roboto", sans-serif;
-    color:var(--primary-color);
-    font-weight: 400;
-     font-style:normal;
-     line-height:normal;
+  font-family: "Roboto", sans-serif;
+  color: var(--primary-color);
+  font-weight: 400;
+  font-style: normal;
+  line-height: normal;
+}
+footer {
+  background-color: var(--fon-color);
+}
 
+button,
+a {
+  font-family: inherit;
 }
-footer{
-    background-color: var(--fon-color);
+button {
+  border: var(--background-color);
 }
-.HeroButton
+.HeroButton {
+  text-align: center;
+  width: 200px;
+  height: 50px;
+  background-color: var(--color-button);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: var(--background-color);
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 300ms;
+  text-align: center;
+  margin: 0 auto;
+  display: block;
+}
+.solutions-for-buisness {
+  color: var(--background-color);
+  font-size: 44px;
+  text-transform: uppercase;
+  line-height: 60px;
+  letter-spacing: 2.64px;
+  word-wrap: break-word;
+  font-weight: bold;
+  max-width:696px; 
+ text-align:center;
+}
+.title {
+  background-color: var(--fon-color);
+  height: 600px;
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+header,section{
+    max-width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.filter {
+  transition: background-color 300ms;
+  color: var(--section-title-color);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 26px;
+  letter-spacing: 0.48px;
+  word-wrap: break-word;
+  text-align: center;
+  margin-left: 8px;
+  margin-right: 8px;
+  display: block;
+}
+.HeroButton:focus,
+.HeroButton:active,
+.HeroButton:hover {
+  background-color: var(--herobuttoncolor);
+  color: var(--background-color);
+}
+.filter:hover,
+.filter:active,
+.filter:focus {
+  background-color: var(--color-button);
+  color: var(--background-color);
+}
+.headerLogo {
+  color: var(--title-color);
+  font-size: 26px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  letter-spacing: 0.78px;
+  word-wrap: break-word;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+.footerLogo {
+  color: var(--background-color);
+  font-size: 26px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  letter-spacing: 0.78px;
+  word-wrap: break-word;
+  text-decoration: none;
+}
+.BlueLogo {
+  color: var(--color-button);
+}
+.adress {
+  color: var(--background-color);
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.42px;
+  word-wrap: break-word;
+  text-decoration: none;
+  font-style: normal;
+}
+.NavigationMenu:hover,
+.NavigationMenu:active,
+.NavigationMenu:focus {
+  color: var(--color-button);
+}
+.footer-contact:hover,
+.footer-contact:active,
+.footer-contact:focus {
+  color: var(--color-button);
+}
+.header-contact:hover,
+.header-contact:active,
+.header-contact:focus {
+  color: var(--color-button);
+}
+.NavigationMenu {
+  color: var(--title-color);
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0.28px;
+  word-wrap: break-word;
+  text-decoration: none;
+  transition: color 300ms;
+  display: inline;
+  margin-left: 50px;
+}
+header {
+  display: flex;
+}
+.footer-contact {
+  color: var(--nav-color);
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.42px;
+  word-wrap: break-word;
+  text-decoration: none;
+  font-style: normal;
+  transition: color 300ms;
+}
+.benefits {
+  color: var(--title-color);
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.42px;
+  word-wrap: break-word;
+}
+.Description {
+  color: var(--primary-color);
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.42px;
+  word-wrap: break-word;
+
+ text-align: start;
+}
+.sectiontitle {
+  color: var(--section-title-color);
+  font-size: 36px;
+  font-weight: 700;
+  letter-spacing: 1.08px;
+  word-wrap: break-word;
+  text-decoration: none;
+  font-style: normal;
+  text-align: center;
+}
+.programmers {
+  color: var(--title-color);
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0.48px;
+  word-wrap: break-word;
+}
+.work {
+  color: var(--primary-color);
+  font-size: 16px;
+  letter-spacing: 0.48px;
+  word-wrap: break-word;
+}
+.projectName {
+  color: var(--title-color);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 36px;
+  letter-spacing: 1.08px;
+  word-wrap: break-word;
+}
+.projectType {
+  color: var(--primary-color);
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.48px;
+  word-wrap: break-word;
+}
+ul {
+  list-style: none;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding-left:0;
+}
+li {
+  display: block;
+ 
+}
+.header-contact {
+  color: var(--primary-color);
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.42px;
+  word-wrap: break-word;
+  text-decoration: none;
+  font-style: normal;
+  transition: color 300ms;
+  text-align: right;
+  margin-right:50px;
+}
+a {
+  text-decoration: none;
+}
+.active {
+  color: var(--color-button);
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0.28px;
+  word-wrap: break-word;
+  text-decoration: none;
+  transition: color 300ms;
+  margin-left: 50px;
+}
+.team {
+  background-color: #f5f4fa;
+}
+.worker-card {
+  background: white;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  background-color: var(--background-color);
+  margin-left: 30px;
+}
+.work-results {
+  margin-left: 40px;
+}
+.projects-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.projects {
+  display: inline-block;
+  margin-left:30px;
+  margin-right:30px;
+  margin-top:30px;
+  background-color: var(--background-color);
+  border:  1px #EEEEEE solid;
+}
+.adress-block {
+  text-align: right;
+  display: flex;
+  justify-content: flex-end;
+  margin-left:auto;
+}
+.class-benefits {
+  margin-left: 30px;
+}
+.first-image
 {
-    text-align: center;
-    width: 200px;
-    height: 50px;
-    background-color: var(--color-button);
-     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
-    border-radius: 4px;
-    color:var(--background-color);
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background-color 300ms;
-    text-align:center;
-    margin: 0 auto;
-    display: block;
+  margin-left: 0px;
 }
-.solutionsForBuisness{
-    color: var(--background-color);
-    font-size: 44px;
-    text-transform: uppercase;
-    line-height: 60px;
-    letter-spacing: 2.64px;
-    word-wrap: break-word;
-    font-weight: bold;
-text-align:center;
-}
-.title
+.first-programmer
 {
-background-color: var(--fon-color);
-padding-top: 200px;
-padding-bottom:280px;
-padding-left:452px;
-padding-right:452px;
-}
-.filter
-{
-    transition: background-color 300ms;
-    color: var(--section-title-color);
-font-size: 16px;
-font-weight: 500;
-line-height: 26px;
-letter-spacing: 0.48px;
-word-wrap: break-word
-}
-.HeroButton:focus,.HeroButton:active,.HeroButton:hover
-{
-    background-color: var(--herobuttoncolor);
-    color:var(--background-color);
-}
-.filter:hover,.filter:active,.filter:focus
-{
-    background-color: var(--color-button);
-    color:var(--background-color);
-}
-.headerLogo
-{
-color:var(--title-color);
-font-size: 26px;
-font-family: "Raleway" , sans-serif;
-font-weight: 700;
-letter-spacing: 0.78px;
-word-wrap: break-word;
-text-decoration: none;
-}
-.footerLogo
-{
-color:var(--background-color);
-font-size: 26px;
-font-family: "Raleway", sans-serif;
-font-weight: 700;
-letter-spacing: 0.78px;
-word-wrap: break-word;
-text-decoration: none;
-}
-.BlueLogo
-{
-    color:var(--color-button);
-}
-.adress
-{
-    color: var(--background-color);
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.42px;
-    word-wrap: break-word;
-    text-decoration: none;
-    font-style: normal;
-}
-.NavigationMenu:hover, .NavigationMenu:active, .NavigationMenu:focus
-{
-   color:var(--color-button);  
-}
-.footer-contact:hover, .footer-contact:active, .footer-contact:focus
-{
-   color:var(--color-button);  
-}
-.header-contact:hover, .header-contact:active, .header-contact:focus
-{
-   color:var(--color-button);  
-}
-.NavigationMenu
-{
-    color: var(--title-color);
-font-size: 14px;
-font-weight: 500;
-letter-spacing: 0.28px;
-word-wrap: break-word;
-text-decoration: none;
-transition:color 300ms;
-}
-.footer-contact
-{
-color: var(--nav-color);
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.42px;
-word-wrap: break-word;
-text-decoration: none;
-font-style:normal;
-transition: color 300ms;
-}
-.benefits
-{
-    color: var(--title-color);
-font-size: 14px;
-font-weight: 700;
-text-transform: uppercase;
-letter-spacing: 0.42px;
-word-wrap: break-word
-}
-.Description
-{
-    color: var(--primary-color);
-font-size: 14px;
-line-height: 24px;
-letter-spacing: 0.42px;
-word-wrap: break-word
-}
-.sectiontitle
-{color: var(--section-title-color);
-font-size: 36px;
-font-weight: 700;
-letter-spacing: 1.08px;
-word-wrap: break-word;
-text-decoration: none;
-font-style:normal;
-}
-.programmers
-{
-color: var(--title-color);
-font-size: 16px;
-font-weight: 500;
-letter-spacing: 0.48px;
-word-wrap: break-word
-}
-.work
-{
-    color: var(--primary-color);
-font-size: 16px;
-letter-spacing: 0.48px;
-word-wrap: break-word
-}
-.projectName
-{
-color: var(--title-color);
-font-size: 18px;
-font-weight: 700;
-line-height: 36px;
-letter-spacing: 1.08px;
-word-wrap: break-word
-}
-.projectType
-{
-    color:var(--primary-color);
-font-size: 16px;
-line-height: 30px;
-letter-spacing: 0.48px;
-word-wrap: break-word;
-}
-ul 
-{
-list-style: none;
-text-decoration: none;
-}
-.header-contact
-{
-    color: var(--primary-color);
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.42px;
-word-wrap: break-word;
-text-decoration: none;
-font-style:normal;
-transition: color 300ms;
-}
-a
-{
-    text-decoration: none;
-}
-.active
-{
-    color: var(--color-button);
-font-size: 14px;
-font-weight: 500;
-letter-spacing: 0.28px;
-word-wrap: break-word;
-text-decoration: none;
-transition:color 300ms;
+  margin-left:0px;
 }
