lab-3(крім заголовка)

--- a/css/style.css
+++ b/css/style.css
@@ -11,15 +11,38 @@
   --section-title-color: #212121;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
+  margin: 0;
+  padding: 0;
   font-family: "Roboto", sans-serif;
   color: var(--primary-color);
   font-weight: 400;
   font-style: normal;
   line-height: normal;
 }
+
+ul, li, h1, h2, h3, p {
+  margin: 0;
+  padding: 0;
+}
+section {
+  padding: 94px 0;
+}
+
+section.benefits {
+  padding-bottom: 0;
+}
+
 footer {
   background-color: var(--fon-color);
+  padding-top:60px;
+  padding-bottom:60px;
 }
 
 button,
@@ -29,6 +52,8 @@ a {
 button {
   border: var(--background-color);
 }
+
+
 .HeroButton {
   text-align: center;
   width: 200px;
@@ -46,13 +71,14 @@ button {
   display: block;
 }
 .solutions-for-buisness {
+  margin-bottom: 30px;
   color: var(--background-color);
   font-size: 44px;
   text-transform: uppercase;
   line-height: 60px;
   letter-spacing: 2.64px;
   word-wrap: break-word;
-  font-weight: bold;
+  font-weight: 700;
   max-width:696px; 
  text-align:center;
 }
@@ -60,18 +86,16 @@ button {
   background-color: var(--fon-color);
   height: 600px;
   display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  align-items: center;
 }
-header,section{
+.container {
     max-width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
 }
-.filter {
+button.filters-item {
   transition: background-color 300ms;
   color: var(--section-title-color);
   font-size: 16px;
@@ -80,23 +104,26 @@ header,section{
   letter-spacing: 0.48px;
   word-wrap: break-word;
   text-align: center;
-  margin-left: 8px;
-  margin-right: 8px;
   display: block;
+  border-radius:4px;
+  padding-top: 6px;
+  padding-bottom:6px;
+  padding-left:22px;
+  padding-right:22px;
 }
 .HeroButton:focus,
-.HeroButton:active,
 .HeroButton:hover {
   background-color: var(--herobuttoncolor);
   color: var(--background-color);
 }
-.filter:hover,
-.filter:active,
-.filter:focus {
+.filters-item:hover,
+.filters-item:focus {
   background-color: var(--color-button);
   color: var(--background-color);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius:4px;
 }
-.headerLogo {
+.header-logo {
   color: var(--title-color);
   font-size: 26px;
   font-family: "Raleway", sans-serif;
@@ -104,10 +131,15 @@ header,section{
   letter-spacing: 0.78px;
   word-wrap: break-word;
   text-decoration: none;
-  display: flex;
-  align-items: center;
+  margin-right:93px;
 }
-.footerLogo {
+.adress
+{
+  display:flex;
+  flex-direction: column;
+  gap:12px;
+}
+.footer-logo {
   color: var(--background-color);
   font-size: 26px;
   font-family: "Raleway", sans-serif;
@@ -115,6 +147,7 @@ header,section{
   letter-spacing: 0.78px;
   word-wrap: break-word;
   text-decoration: none;
+  padding-bottom: 28px;
 }
 .BlueLogo {
   color: var(--color-button);
@@ -129,17 +162,14 @@ header,section{
   font-style: normal;
 }
 .NavigationMenu:hover,
-.NavigationMenu:active,
 .NavigationMenu:focus {
   color: var(--color-button);
 }
 .footer-contact:hover,
-.footer-contact:active,
 .footer-contact:focus {
   color: var(--color-button);
 }
 .header-contact:hover,
-.header-contact:active,
 .header-contact:focus {
   color: var(--color-button);
 }
@@ -151,13 +181,12 @@ header,section{
   word-wrap: break-word;
   text-decoration: none;
   transition: color 300ms;
-  display: inline;
-  margin-left: 50px;
 }
-header {
+header .container {
   display: flex;
+  align-items:center;
 }
-.footer-contact {
+.footer-contact{
   color: var(--nav-color);
   font-size: 14px;
   line-height: 16px;
@@ -166,6 +195,7 @@ header {
   text-decoration: none;
   font-style: normal;
   transition: color 300ms;
+  
 }
 .benefits {
   color: var(--title-color);
@@ -175,16 +205,17 @@ header {
   letter-spacing: 0.42px;
   word-wrap: break-word;
 }
-.Description {
+.benefits-desc {
   color: var(--primary-color);
   font-size: 14px;
   line-height: 24px;
+  font-weight: 400;
+  text-transform: none;
   letter-spacing: 0.42px;
   word-wrap: break-word;
-
  text-align: start;
 }
-.sectiontitle {
+.section-title {
   color: var(--section-title-color);
   font-size: 36px;
   font-weight: 700;
@@ -194,18 +225,22 @@ header {
   font-style: normal;
   text-align: center;
 }
-.programmers {
+.programmers-name{
   color: var(--title-color);
   font-size: 16px;
   font-weight: 500;
   letter-spacing: 0.48px;
   word-wrap: break-word;
+  text-align: center;
 }
 .work {
   color: var(--primary-color);
   font-size: 16px;
   letter-spacing: 0.48px;
   word-wrap: break-word;
+  text-align: center;
+  padding:0px;
+  margin:0px;
 }
 .projectName {
   color: var(--title-color);
@@ -222,13 +257,26 @@ header {
   letter-spacing: 0.48px;
   word-wrap: break-word;
 }
+.menu ul {
+  display: flex;
+  gap: 50px;
+}
+
+.benefits ul {
+  display: flex;
+}
+
+.benefits li {
+  max-width: 270px;
+}
+
+.menu a,
+.adress-block a {
+  padding: 32px 0;
+  display: inline-block;
+}
 ul {
   list-style: none;
-  text-decoration: none;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  padding-left:0;
 }
 li {
   display: block;
@@ -241,66 +289,96 @@ li {
   letter-spacing: 0.42px;
   word-wrap: break-word;
   text-decoration: none;
-  font-style: normal;
   transition: color 300ms;
-  text-align: right;
-  margin-right:50px;
 }
 a {
   text-decoration: none;
 }
-.active {
+.NavigationMenu.active {
   color: var(--color-button);
-  font-size: 14px;
-  font-weight: 500;
-  letter-spacing: 0.28px;
-  word-wrap: break-word;
-  text-decoration: none;
-  transition: color 300ms;
-  margin-left: 50px;
 }
-.team {
+.workers{
   background-color: #f5f4fa;
+}
+.cards-list
+{
+  display: flex;
+  justify-content: center;
+  margin-top:50px;
 }
 .worker-card {
   background: white;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
+  height:370px;
   background-color: var(--background-color);
+}
+.worker-card:not(:first-child)
+{
   margin-left: 30px;
 }
-.work-results {
-  margin-left: 40px;
-}
+
 .projects-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap:30px;
 }
-
 .projects {
   display: inline-block;
-  margin-left:30px;
-  margin-right:30px;
-  margin-top:30px;
   background-color: var(--background-color);
   border:  1px #EEEEEE solid;
 }
 .adress-block {
-  text-align: right;
   display: flex;
-  justify-content: flex-end;
+  gap: 40px;
   margin-left:auto;
 }
-.class-benefits {
+.class-benefits:not(:first-child) {
   margin-left: 30px;
 }
-.first-image
+.work-list
 {
-  margin-left: 0px;
+  display:flex;
+  justify-content: center;
+  margin-top:50px;
 }
-.first-programmer
+.work-item:not(:first-child)
 {
-  margin-left:0px;
+  margin-left:30px;
+}
+.programmers-desc
+{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+ margin-top:30px;
+ margin-bottom: 30px;
+  gap:10px;
+}
+.footer-contact-list
+{
+  margin-top:28px;
+  display:flex;
+  flex-direction: column;
+  gap:12px;
+}
+.fliters-list
+{
+margin-top: 94px;
+display:flex;
+justify-content: center;
+gap:8px;
+}
+.projects-section
+{
+  padding:50px 0;
+  padding-bottom:94px;
+}
+.projects-desc
+{
+  margin-left:24px;
+  padding-top:20px;
+  padding-bottom:20px;
 }
