--- a/css/style.css
+++ b/css/style.css
@@ -83,9 +83,10 @@ header
   font-weight: 700;
   max-width:696px; 
  text-align:center;
+ 
 }
 .title {
-  background-color: var(--fon-color);
+  background-image: url(/images/back-image.jpg);
   height: 600px;
   display: flex;
   align-items: center;
@@ -171,6 +172,10 @@ button.filters-item {
 .header-contact:hover,
 .header-contact:focus {
   color: var(--color-button);
+}
+.header-contact-logo:hover,
+.header-contact-logo:focus{
+  fill:var(--color-button)
 }
 .NavigationMenu {
   color: var(--title-color);
@@ -315,7 +320,6 @@ a {
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
-  height:370px;
   background-color: var(--background-color);
 }
 .worker-card:not(:first-child)
@@ -400,4 +404,109 @@ margin-bottom:10px;
 .email
 {
   margin-bottom:12px;
+}
+.clients-item
+{
+  display:flex;
+  border:1px solid #AFB1B8;
+  border-radius: 4px;
+  width:170px;
+  height:92px;
+  justify-content: center;
+  align-items: center;
+  fill:#AFB1B8;
+}
+.clients-list
+{
+  margin-top: 50px;
+  justify-content: center;
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  gap:30px;
+}
+.clients-item:hover{
+  fill:var(--color-button);
+  border-color: var(--color-button);
+  transition: 300ms;
+}
+.clients-logo  
+{
+  
+  width: 106px;
+  height:60px;
+}
+
+.social-networks-logo
+{
+width:44px;
+height:44px;
+border-width:12px;
+fill:#AFB1B8;
+border-radius: 50%;
+}
+.social-networks-logo:hover, .social-networks-logo:focus
+, .footer-social-networks-logo:hover,.footer-social-networks-logo:focus{
+  
+  background-color: var(--color-button);
+  fill: var(--background-color);
+  transition:300ms;
+}
+.social-networks
+{
+margin-top:16px;
+display: flex;
+justify-content: center;
+gap:10px;
+flex-wrap: wrap;
+}
+.social-networks-title
+{
+color: #FFF;
+font-size: 14px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+letter-spacing: 0.42px;
+text-transform: uppercase;
+margin-bottom: 20px;
+}
+.footer-social-networks-logo
+{
+  width: 44px;
+  height: 44px;
+fill:#FFF;
+background: rgba(255, 255, 255, 0.10);
+border-radius: 50%;
+}
+.header-contact-logo
+{
+  width: 16px;
+  margin-right: 10px;
+  fill:var(--primary-color)
+}
+.footer-block-list
+{
+  display: flex;
+  gap:94px;
+}
+.benefits-logo
+{
+  width: 70px;
+  height: 70px;
+  align-self: center;
+}
+.benefits-svg-div
+{
+  padding-top: 25px;
+  padding-bottom: 25px;
+  margin-bottom:30px;
+  background-color: #f5f4fa;
+  display: flex;
+  justify-content: center;
+}
+.footer-logo-list
+{
+  display: flex;
+  gap:10px;
 }
