--- a/css/style.css
+++ b/css/style.css
@@ -86,10 +86,18 @@ header
  
 }
 .title {
-  background-image: url(/images/back-image.jpg);
+background-size:cover;
+background: url(/images/back-image.jpg);
   height: 600px;
   display: flex;
   align-items: center;
+}
+.overlay
+{
+  position: fixed;
+  background-color: rgba(47, 48, 58, 0.4);
+  width: 100%;
+  height:100%;
 }
 .container {
     max-width: 1200px;
@@ -172,11 +180,9 @@ button.filters-item {
 .header-contact:hover,
 .header-contact:focus {
   color: var(--color-button);
+  fill:var(--color-button);
 }
-.header-contact-logo:hover,
-.header-contact-logo:focus{
-  fill:var(--color-button)
-}
+
 .NavigationMenu {
   color: var(--title-color);
   font-size: 14px;
@@ -299,6 +305,7 @@ li {
   word-wrap: break-word;
   text-decoration: none;
   transition: color 300ms;
+  fill:var(--primary-color);
 }
 a {
   text-decoration: none;
@@ -425,14 +432,26 @@ margin-bottom:10px;
   justify-content: center;
   gap:30px;
 }
-.clients-item:hover{
+.clients-ref{
+ fill:#AFB1B8;
+ transition: 300ms;
+}
+.clients-item:hover .clients-logo{
   fill:var(--color-button);
+  
+  transition: 300ms;
+}
+.clients-item:hover
+{
   border-color: var(--color-button);
   transition: 300ms;
 }
+.clients-ref:hover
+{
+  fill:var(--color-button);
+}
 .clients-logo  
 {
-  
   width: 106px;
   height:60px;
 }
@@ -481,9 +500,9 @@ border-radius: 50%;
 }
 .header-contact-logo
 {
+  transition: 300ms;
   width: 16px;
   margin-right: 10px;
-  fill:var(--primary-color)
 }
 .footer-block-list
 {
