--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ footer {
 button,
 a {
   font-family: inherit;
+  cursor: pointer;
 }
 button {
   border: var(--background-color);
@@ -71,6 +72,7 @@ header
   text-align: center;
   margin: 0 auto;
   display: block;
+  letter-spacing: 0.96px;
 }
 .solutions-for-buisness {
   margin-bottom: 30px;
@@ -145,10 +147,6 @@ button.filters-item {
   text-decoration: none;
   margin-right:93px;
 }
-.adress
-{
-  margin-bottom:12px;
-}
 .footer-logo {
   color: var(--background-color);
   font-size: 26px;
@@ -183,7 +181,16 @@ button.filters-item {
   color: var(--color-button);
   fill:var(--color-button);
 }
-
+li.header-contact-item:first-child svg
+{
+width:16px;
+height: 12px;
+}
+li.header-contact-item:last-child svg
+{
+  width:10px;
+  height:16px;
+}
 .NavigationMenu {
   color: var(--title-color);
   font-size: 14px;
@@ -307,6 +314,11 @@ li {
   text-decoration: none;
   transition: color 300ms;
   fill:var(--primary-color);
+  
+}
+.header-contact {
+  display: flex;
+  align-items:center;
 }
 a {
   text-decoration: none;
@@ -326,9 +338,10 @@ a {
 .worker-card {
   background: white;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
+  border-radius: 4px;
+  border-radius: 4px;
   background-color: var(--background-color);
+  
 }
 .worker-card:not(:first-child)
 {
@@ -376,6 +389,10 @@ a {
 {
   margin-top:28px;
 }
+.footer-contact-list p:not(:last-child)
+{
+  margin-bottom:12px;
+}
 .fliters-list
 {
 margin-top: 94px;
@@ -386,8 +403,7 @@ margin-bottom: 50px;
 }
 .projects-section
 {
-  padding:50px 0;
-  padding-bottom:94px;
+  padding:94px 0;
 }
 .projects-desc
 {
@@ -409,19 +425,15 @@ margin-bottom:10px;
 {
   display: block;
 }
-.email
-{
-  margin-bottom:12px;
-}
+
 .clients-item
 {
-  display:flex;
   border:1px solid #AFB1B8;
   border-radius: 4px;
   width:170px;
   height:92px;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
+  
   fill:#AFB1B8;
 }
 .clients-list
@@ -434,12 +446,18 @@ margin-bottom:10px;
   gap:30px;
 }
 .clients-ref{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  size:cover;
  fill:#AFB1B8;
+ height: 100%;
+ width: 100%;
  transition: 300ms;
 }
 .clients-item:hover .clients-logo{
   fill:var(--color-button);
-  
+  align-items: center;
   transition: 300ms;
 }
 .clients-item:hover
@@ -464,6 +482,11 @@ height:44px;
 border-width:12px;
 fill:#AFB1B8;
 border-radius: 50%;
+}
+.social-networks-list
+{
+  display: flex;
+  gap:10px;
 }
 .social-networks-logo:hover, .social-networks-logo:focus
 , .footer-social-networks-logo:hover,.footer-social-networks-logo:focus{
