--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,7 @@ button.filters-item {
 .NavigationMenu:hover,
 .NavigationMenu:focus {
   color: var(--color-button);
+  border-bottom:2px var(--color-button);
 }
 .footer-contact:hover,
 .footer-contact:focus {
@@ -356,6 +357,7 @@ a {
 }
 .projects {
   display: inline-block;
+  position: relative;
   background-color: var(--background-color);
   border:  1px #EEEEEE solid;
   max-width:370px;
@@ -373,6 +375,13 @@ a {
   display:flex;
   justify-content: center;
   margin-top:50px;
+}
+.work-item
+{
+  position: relative;
+  display: inline-block;
+  width: 370px;
+  height:294px;
 }
 .work-item:not(:first-child)
 {
@@ -395,7 +404,6 @@ a {
 }
 .fliters-list
 {
-margin-top: 94px;
 display:flex;
 justify-content: center;
 gap:8px;
@@ -553,3 +561,107 @@ border-radius: 50%;
   display: flex;
   gap:10px;
 }
+.modal-window
+{
+    position: fixed;
+    z-index: 1;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.20);
+transition: opacity 250ms cubic-bezier(0.4,0,0.2,1);
+}
+.modal-container
+{
+  display: flex;
+  justify-content:flex-end;
+  width: 528px;
+  height: 581px;
+  opacity:1;
+  border-radius:4px;
+background-color: var(--background-color);
+box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+overflow: inherit;
+transition: opacity 250ms cubic-bezier(0.4,0,0.2,1);
+}
+.is-hidden
+{
+visibility: hidden;
+opacity:0;
+pointer-events: none;
+}
+.work-desc
+{
+  display:flex;
+  justify-content:center;
+  align-items: center;
+  color: #FFF;
+text-align: center;
+font-size: 14px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+letter-spacing: 0.42px;
+text-transform: uppercase;
+  position: absolute;
+  text-align: center;
+  bottom:0px;
+  left: 0px;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.80);
+}
+.close
+{
+  width: 30px;
+  height:30px;
+  background-color: var(--background-color);
+}
+.menu-item{
+  position: relative;
+}
+.active::after {
+  display: block;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--color-button);
+}
+.overlay-text
+{
+  display: flex;
+  padding-left: 24px;
+  padding-right: 24px;
+  color: var(--background-color);
+  background-color: rgba(33, 150, 243, 0.90);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; 
+  letter-spacing: 0.54px;
+  position: absolute;
+  top: 0;
+  height: 100%;
+  transform: translateY(100%);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  text-align: center;
+  align-items: center;
+}
+.projects-cover-wrap
+{
+  height: 294px;
+  position: relative;
+  overflow: hidden;
+}
+
+  .link:is(:hover, :focus) .overlay-text {
+    transform: translateY(0);
+  }
