--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ header {
   color: var(--background-color);
   font-size: 16px;
   font-weight: 700;
-  line-height: 30px;
+  line-height: 1.875;
   cursor: pointer;
   transition: var(--transition-default);
   text-align: center;
@@ -87,7 +87,7 @@ header {
   color: var(--background-color);
   font-size: 44px;
   text-transform: uppercase;
-  line-height: 60px;
+  line-height: 1.363;
   letter-spacing: 2.64px;
   word-wrap: break-word;
   font-weight: 700;
@@ -120,7 +120,7 @@ button.filters-item {
   color: var(--section-title-color);
   font-size: 16px;
   font-weight: 500;
-  line-height: 26px;
+  line-height: 1.625;
   letter-spacing: 0.48px;
   word-wrap: break-word;
   text-align: center;
@@ -168,7 +168,7 @@ button.filters-item {
 .adress {
   color: var(--background-color);
   font-size: 14px;
-  line-height: 16px;
+  line-height: 114%;
   letter-spacing: 0.42px;
   word-wrap: break-word;
   text-decoration: none;
@@ -217,7 +217,7 @@ p .footer-contact :not(:last-child) {
   display: block;
   color: var(--nav-color);
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.42px;
   word-wrap: break-word;
   text-decoration: none;
@@ -236,7 +236,7 @@ p .footer-contact :not(:last-child) {
 .benefits-desc {
   color: var(--primary-color);
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.714;
   font-weight: 400;
   text-transform: none;
   letter-spacing: 0.42px;
@@ -275,14 +275,14 @@ p .footer-contact :not(:last-child) {
   color: var(--title-color);
   font-size: 18px;
   font-weight: 700;
-  line-height: 36px;
+  line-height: 2;
   letter-spacing: 1.08px;
   word-wrap: break-word;
 }
 .projectType {
   color: var(--primary-color);
   font-size: 16px;
-  line-height: 30px;
+  line-height: 1.875;
   letter-spacing: 0.48px;
   word-wrap: break-word;
 }
@@ -299,9 +299,9 @@ p .footer-contact :not(:last-child) {
   max-width: 270px;
 }
 .menu a,
-.adress-block a {
+.adress-block a{
   padding: 32px 0;
-  display: inline-block;
+  display: flex;
 }
 ul {
   list-style: none;
@@ -310,15 +310,13 @@ li {
   display: block;
 }
 .header-contact {
-  display: flex;
-  align-items: flex-start;
+  align-items:ce;
   color: var(--primary-color);
   font-size: 14px;
-  line-height: 16px;
+  line-height: 114%;
   letter-spacing: 0.42px;
   word-wrap: break-word;
   text-decoration: none;
-  height: 100%;
   transition: var(--transition-default);
   fill: var(--primary-color);
 }
@@ -494,7 +492,6 @@ a {
   font-size: 14px;
   font-style: normal;
   font-weight: 700;
-  line-height: normal;
   letter-spacing: 0.42px;
   text-transform: uppercase;
   margin-bottom: 20px;
@@ -508,7 +505,6 @@ a {
   transition: var(--transition-default);
 }
 .header-contact-logo {
-  width: 16px;
   margin-right: 10px;
 }
 .footer-block-list {
@@ -546,9 +542,11 @@ a {
   transition: opacity var(--transition-default);
 }
 .modal-container {
+  position: relative;
   width: 528px;
   height: 581px;
   opacity: 1;
+  padding: 40px 40px;
   border-radius: 4px;
   background-color: var(--background-color);
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
@@ -571,7 +569,6 @@ a {
   font-size: 14px;
   font-style: normal;
   font-weight: 700;
-  line-height: normal;
   letter-spacing: 0.42px;
   text-transform: uppercase;
   position: absolute;
@@ -584,6 +581,9 @@ a {
 }
 .close {
   display: flex;
+  position: absolute;
+  top:0px;
+  right: 0px; 
   justify-content: center;
   align-items: center;
   text-align: right;
@@ -594,9 +594,12 @@ a {
   border: 1px solid rgba(0, 0, 0, 0.1);
   margin-top: 8px;
   margin-right: 8px;
+  transition:var(--transition-default);
 }
 .menu-item {
   position: relative;
+  display: flex;
+  align-items: center;
 }
 .active::after {
   display: block;
@@ -618,14 +621,14 @@ a {
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
-  line-height: 28px;
+  line-height: 1.56;
   letter-spacing: 0.54px;
   position: absolute;
   top: 0;
   height: 100%;
   transform: translateY(100%);
   transition: var(--transition-default);
-  align-items: center;
+  align-items:center;
 }
 .projects-cover-wrap {
   height: 294px;
@@ -645,10 +648,7 @@ a {
   justify-content: flex-end;
 }
 .subscribe-button {
-  padding-bottom: 10px;
-  padding-top: 10px;
-  padding-left: 28px;
-  padding-right: 28px;
+ padding:10px 28px;
   border-radius: 4px;
   background-color: var(--color-button);
   color: #fff;
@@ -659,9 +659,8 @@ a {
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
-  line-height: 30px;
+  line-height: 1.875;
   letter-spacing: 0.96px;
-  margin-top: 20px;
 }
 .subscribe-svg {
   fill: var(--background-color);
@@ -669,7 +668,6 @@ a {
   height: 24px;
 }
 .footer-input {
-  margin-top: 20px;
   border-radius: 4px;
   background-color: #2f303a;
   box-shadow: 0;
@@ -684,7 +682,7 @@ a {
   border: 1px solid rgba(255, 255, 255, 0.3);
   color: var(--background-color);
   font-size: 16px;
-  line-height: 20px;
+  line-height: 1.25;
   letter-spacing: 0.48px;
   padding-left: 15px;
 }
@@ -696,9 +694,9 @@ a {
 .sub-title {
   color: #fff;
   font-weight: 700;
-  line-height: normal;
   letter-spacing: 0.42px;
   text-transform: uppercase;
+  margin-bottom:20px;
 }
 .modal-window-title {
   color: #212121;
@@ -707,14 +705,11 @@ a {
   font-size: 20px;
   font-style: normal;
   font-weight: 700;
-  line-height: normal;
   letter-spacing: 0.6px;
 }
 .modal-form {
   display: flex;
   flex-direction: column;
-  padding-left: 40px;
-  padding-right: 40px;
 }
 .modal-icon {
   position: absolute;
@@ -748,7 +743,6 @@ a {
   color: rgba(117, 117, 117, 0.5);
   font-size: 12px;
   font-weight: 400;
-  line-height: normal;
   letter-spacing: 0.12px;
 }
 .modal-input:focus~.modal-icon
@@ -765,8 +759,8 @@ display:flex;
 flex-direction: row;
 align-self: center;
 gap:7px;
-margin-top:20px;
 margin-bottom:30px;
+margin-top:20px;
 }
 .terms-href
 {
@@ -777,7 +771,7 @@ text-decoration-line: underline;
 {
   font-size: 14px;
 font-weight: 400;
-line-height: 24px;
+line-height: 1.714;
 letter-spacing: 0.42px;
 }
 .terms-icon
@@ -793,31 +787,74 @@ letter-spacing: 0.42px;
 }
 .modal-checkbox
 {
+  appearance: none;
+  -webkit-appearance:none;
   width:16px;
   height:15px;
+  background-color: var(--background-color);
+  border-radius: 1px;
+ 
+  background-image: url(/images/icons.svg#icon-checking);
+}
+.modal-checkbox::after
+{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+   width:16px;
+  height:15px;
+  font-family: "Font Awesome 6 Free";
+  content:"\f00c";
+  font-size:12px;
+ cursor: pointer;
+  border:2px solid #212121;
+  border-radius: 2px;
+  color: var(--background-color);
+  font-weight: 900;
+  transition: var(--transition-default);
+}
+.modal-checkbox:checked::after
+{
+  background-color: var(--color-button);
+  border:none;
 }
 .send-button
 { 
+  position: absolute;
+  left:32.1%;
   align-self:center;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 border-radius:4px;
-width:200px;
-height:50px;
+padding: 10px 52px;
 font-size: 16px;
   color:var(--background-color);
 background-color:var(--herobuttoncolor);
 text-align: center;
 font-weight: 700;
-line-height: 30px; /* 187.5% */
+line-height: 187.5%;
 letter-spacing: 0.96px;
+transition :var(--transition-default);
 }
 .input-desc
 {
+  display: block;
   color: #757575;
-
 font-size: 12px;
-
 letter-spacing: 0.12px;
-  margin-top:12px;
-  margin-bottom: 4px;
+margin-bottom:4px;
+margin-top:10px;
+}
+.close:hover,.close:focus
+{
+  fill:#188ce8;
+}
+.header-contact-logo:first-child
+{
+  align-self: center;
+}
+.footer-container
+{
+  display: flex;
+  flex-direction: row;
+  gap:94px;
 }
